--- a/src/View/CadastroTeste/FiltroBuscaProf.form
+++ b/src/View/CadastroTeste/FiltroBuscaProf.form
@@ -248,7 +248,7 @@
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                                          <Component id="Salario" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jFormattedTextField4" alignment="0" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
@@ -288,7 +288,7 @@
                       <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="cpf" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
-                          <Component id="Salario" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
+                          <Component id="jFormattedTextField4" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                           <Component id="nome1" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -340,7 +340,7 @@
                   <Border info="null"/>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Cursor Padr&#xe3;o"/>
+                  <Color id="Default Cursor"/>
                 </Property>
               </Properties>
               <Events>
@@ -589,7 +589,7 @@
                 <Property name="text" type="java.lang.String" value="Endere&#xe7;o:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JFormattedTextField" name="Salario">
+            <Component class="javax.swing.JFormattedTextField" name="jFormattedTextField4">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="null"/>
@@ -615,7 +615,7 @@
                   <Border info="null"/>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Cursor Padr&#xe3;o"/>
+                  <Color id="Text Cursor"/>
                 </Property>
               </Properties>
               <Events>
